--- a/OverloadFunctions_3/OverloadFunctions_3.vcxproj.filters
+++ b/OverloadFunctions_3/OverloadFunctions_3.vcxproj.filters
@@ -19,10 +19,10 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FillRand.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Resource Files</Filter>
     </ClCompile>
     <ClCompile Include="Print.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
